--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install dependencies
+      run: apt-get update && apt-get install -y libfltk1.3 libfltk-gl1.3
     - name: Build
       run: cargo build --verbose
     - name: Run tests
