--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  linux:
 
     runs-on: ubuntu-latest
 
@@ -27,3 +27,18 @@ jobs:
       with:
         name: scrappy-linux
         path: target/release/scrappy
+
+  windows:
+
+    runs-on: windows-2019
+
+    steps:
+      - name: Build
+        run: cargo build --release --verbose
+      - name: Run tests
+        run: cargo test --verbose
+      - name: Upload binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: scrappy-windows.exe
+          path: target/release/scrappy.exe
