--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -31,6 +31,7 @@ jobs:
     runs-on: windows-2019
 
     steps:
+      - uses: actions/checkout@v2
       - name: Build
         run: cargo build --verbose
       - name: Run tests
