--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,15 +2,13 @@ name: Rust
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [ '!master' ]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  linux:
 
     runs-on: ubuntu-latest
 
@@ -19,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: sudo apt-get update && sudo apt-get install -y libfltk1.3-dev libfltk-gl1.3 xorg-dev
     - name: Build
-      run: cargo build --release --verbose
+      run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
     - name: Upload binary
@@ -27,3 +25,19 @@ jobs:
       with:
         name: scrappy-linux
         path: target/release/scrappy
+
+  windows:
+
+    runs-on: windows-2019
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
+      - name: Upload binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: scrappy-windows.exe
+          path: target/release/scrappy.exe
