--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
     runs-on: windows-2019
 
     steps:
+      - uses: actions/checkout@v2
       - name: Build
         run: cargo build --release --verbose
       - name: Run tests
