[ci] Add extra package to release process

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,3 +60,4 @@ jobs:
           extra_plugins: |
             @google/semantic-release-replace-plugin
             @semantic-release/git
+            conventional-changelog-ember
