--- a/scrappy_core/Cargo.toml
+++ b/scrappy_core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "scrappy"
+name = "scrappy_core"
 version = "0.1.0"
 authors = ["proegssilb <minifig404@gmail.com>"]
 edition = "2018"
@@ -7,5 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fltk = { version = "^0.7", features = ["fltk-bundled"] }
-scrappy_core = { path = "scrappy_core" }
