[feat] Add document and DocumentManager to architecture
Implement Document and Document Manager trait. First-draft, expect rework. Tests are not complete, nor necessarily reliable.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2018"
 [dependencies]
 fltk = { version = "^0.7", features = ["fltk-bundled"] }
 scrappy_core = { path = "scrappy_core" }
+
+[dev-dependencies]
+proptest = "^0.10"
