[minor(document)] Change text framework, add String insertion
Switched test framework from property testing to built-in plus fake-rs. Required to actually debug tests.
Implemented inserting Strings into the Document. This includes a String insertion splitting a line.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ fltk = { version = "^0.7", features = ["fltk-bundled"] }
 scrappy_core = { path = "scrappy_core" }
 
 [dev-dependencies]
-proptest = "^0.10"
+fake = { version = "2.2", features=['derive', 'chrono']}
